# binscope

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
release_notes/: 2.txt
src/: hasher.cpp  icon_base64.txt  icon_data.cpp  icon_data.h  indicators.cpp  main.cpp  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  resources.qrc  strings.cpp
